--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,31 +7,25 @@ jobs:
       # githubからソースコードをチェックアウトする
       - checkout
       # 最新のbundlerをインストールする
-      - run:
-        name: Update bundler
-        command: |
-          sudo gem update --system
-          sudo gem uninstall bundler
-          sudo rm /usr/local/bin/bundle
-          sudo rm /usr/local/bin/bundler
-          sudo gem install bundler
+      - run: sudo gem update --system
+      - run: sudo gem uninstall bundler
+      - run: sudo gem update --system
+      - run: sudo rm /usr/local/bin/bundle
+      - run: sudo rm /usr/local/bin/bundler
+      - run: sudo gem install bundler
       # bundle installのキャシュが既にあればそれを取ってくる
       - restore_cache:
-        keys:
+          keys:
           - gem-cache-{{ arch }}-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
           - gem-cache-{{ arch }}-{{ .Branch }}
           - gem-cache
       # bundle installを実行する
-      - run:
-        name: Execute bundle install
-        command: bundle check --path=vendor/bundle || bundle install --path vendor/bundle --clean --jobs 4 --retry 3
+      - run: bundle check --path=vendor/bundle || bundle install --path vendor/bundle --clean --jobs 4 --retry 3
       # bundle installのデータをキャッシュする
       - save_cache:
-        key: gem-cache-{{ arch }}-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
-        paths:
+          key: gem-cache-{{ arch }}-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
+          paths:
           - ./vendor/bundle
       # Rubocopを実行する
-      - run:
-          name: Execute rubocop
-          command: bundle exec rubocop
+      - run: bundle exec rubocop
 
